Added CSS folder

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 #main-navbar {
-
+background-color: blue;
+overflow: hidden;
+width: 100%;
 }
 #navbar-container {
-
+float: left;
 }
 #onpage {
 
@@ -13,4 +15,3 @@
 #sidebar-container {
 
 }
-#
