--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,20 @@
 #main-navbar {
 background-color: blue;
-width: 100%;
 overflow: hidden;
+width: 100%;
 position: relative;
 }
 #navbar-container {
 position: relative;
 float: left;
+left: 50%;
 display: block;
-left: 50%
 }
 #navbar-container ul {
-  list-style-type: none;
   position: relative;
   float: left;
   display: block;
+  list-style-type: none;
   margin: 0;
   padding: 0;
   right: 50%;
@@ -24,13 +24,13 @@ left: 50%
   padding: 10px 20px;
 }
 #navbar-container ul li a {
+  text-decoration: none;
   color: #fff;
-  text-decoration none;
 }
 #sidebar {
   position: fixed;
-  background-color: red;
   right: 0%;
+  background-color: red;
   height: 100%;
   width: 20%;
 
